# libusb

./: CMakeLists.txt
examples/: CMakeLists.txt
libusb/: CMakeLists.txt  config.cmake  config.h.cmake  core.c  io.c  libusb-1.0.def  libusb.h  libusbi.h
libusb/os/: CMakeLists.txt  darwin_usb.c  darwin_usb.c.BACKUP.1584.c  darwin_usb.c.LOCAL.1584.c  darwin_usb.c.REMOTE.1584.c  darwin_usb.h  linux_usbfs.c  windows_usb.c  windows_usb.h
msvc/: ddk_build.cmd
